--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Library</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="/stylesheet.css">
 </head>
 
 <body>
@@ -20,9 +20,12 @@
         </header>
 
         <main id="library">
+            
 
-    
         </main>
+        <div id="template">
+            <button class="bin"></button>
+        </div>
         <aside id="sidebar">
             <h1>Library</h1>
             <form id="form-add" taget="frame" autocomplete="off">
@@ -58,8 +61,7 @@
         </aside>
         <footer id="footer"></footer>
     </div>
-    <iframe name="frame"></iframe>
-    <script src="script.js" async defer></script>
+    <script src="script.js" defer></script>
 </body>
 
 </html>
