Created delete button for each book

--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
             
 
         </main>
+        
         <div id="template">
-            <button class="bin"></button>
+            <button type="button" class="bin"></button>
         </div>
+
         <aside id="sidebar">
             <h1>Library</h1>
             <form id="form-add" taget="frame" autocomplete="off">
