Added toggle to change read status

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
         
         <div id="template">
             <button type="button" class="bin"></button>
+            <label class="switch">
+                <input type="checkbox" class="switchy">
+                <span class="slider"></span>
+              </label>
         </div>
 
         <aside id="sidebar">
