--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Library</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/stylesheet.css">
+    <link rel="stylesheet" href="stylesheet.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Cormorant+Infant:ital,wght@1,700&display=swap" rel="stylesheet">
 </head>
